codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__slash_copy_picker_uses_completed_commentary_during_active_turn.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1499
expression: "render_bottom_popup(&chat, 80)"
---
  Copy to clipboard


› 1. Whole response  Here is the command:
  2. sh code         echo current

  enter select · esc back
