codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__transcript_copy_unconfirmed.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 3196
expression: "render_bottom_popup(&chat, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
────────────────────────────────────────────────┐ CONTEXT LEDGER  context not
› Ask Elpis to do anything                      │ measured · ≈0 source
────────────────────────────────────────────────┤ estimates
  Copy unconfirmed; /export saves chat          │ Tab controls · Alt+C hide ·
                                                │ Ctrl+click open file
                                                │
                                                │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
