codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__slash_commands__transcript_copy_unconfirmed_narrow.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 40)"
---
 Elpis · model gpt-5.6-sol default · loc
┌──────────────────────────────────────┐
› Ask Elpis to do anything             │
└──────────────────────────────────────┘
  Copy unconfirmed; /export saves chat
